cmake_minimum_required (VERSION 3.15)
project(glad)
if(POLICY CMP0079)
  cmake_policy(SET CMP0091 NEW)
endif()
if(POLICY CMP0079)
  cmake_policy(SET CMP0079 NEW)
endif()
include_directories(include)
add_library(glad OBJECT src/glad.c)
set_target_properties(glad PROPERTIES FOLDER "Dependencies/glad")
set_property(TARGET glad PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
